--- a/index.html
+++ b/index.html
@@ -1,49 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <script src="main.js" defer></script>
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <div class="evaluation card-body">
+    <!-- Rating state start -->
+    <div class="card-content">
+      <div class="icon">
+        <img src="/images/icon-star.svg" alt="" />
+      </div>
+      <h1>How did we do?</h1>
 
-  <!-- Rating state start -->
+      <p>
+        Please let us know how we did with your support request. All feedback
+        is appreciated to help us improve our offering!
+      </p>
+      <div class="ratings">
+        <button id="1" class="numbers">1</button>
+        <button id="2" class="numbers">2</button>
+        <button id="3" class="numbers">3</button>
+        <button id="4" class="numbers">4</button>
+        <button id="5" class="numbers">5</button>
+      </div>
+      <button id="submit">Submit</button>
+    </div>
+  </div>
 
-  How did we do?
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+  <div class="second-card card-body">
+    <div class="thankyou card-content">
+       <!--Display property is set on none. After the user chooses the rating and clicks the subtmit button, display is then set on block while the other on none-->
+    <img class="pic" src="/images/illustration-thank-you.svg" alt="">
 
-  1 2 3 4 5
+    <!--span ID added so we can later insert the user selected value in this field-->
+    <div class="ratingContainer">
+      <span class="rating">You selected <span id="rating"></span> out of
+        5</span>
+    </div>
 
-  Submit
 
-  <!-- Rating state end -->
+    <h1 class="heading">Thank you!</h1>
+    <p class="paragraph">We appreciate you taking the time
+      to give a rating. If you ever need more support, don’t hesitate to get
+      in touch!</p>
+    </div>
+  </div>
 
-  <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
+      Name Here</a>
   </div>
 </body>
+
 </html>
