--- a/index.html
+++ b/index.html
@@ -10,22 +10,10 @@
   <script src="main.js" defer></script>
 
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
-  <div class="evaluation card-body">
+  <div class="card-body" id="evaluation">
     <!-- Rating state start -->
     <div class="card-content">
       <div class="icon">
@@ -49,7 +37,7 @@
   </div>
 
 
-  <div class="second-card card-body">
+  <div class=" card-body" id="second-card">
     <div class="thankyou card-content">
        <!--Display property is set on none. After the user chooses the rating and clicks the subtmit button, display is then set on block while the other on none-->
     <img class="pic" src="/images/illustration-thank-you.svg" alt="">
@@ -71,8 +59,8 @@
 
   <div class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
-      Name Here</a>
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">
+      George Boakye</a>
   </div>
 </body>
 
